// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FilmSort /> Render should render the component 1`] = `
<div
  className="film-sort"
>
  <Label
    content="Sort by "
    labelBold={false}
    labelUC={false}
    labelWhite={false}
  />
  <Button
    btnBig={false}
    btnBold={true}
    btnClick={[MockFunction]}
    btnGrey={false}
    btnRed={false}
    btnSm={false}
    btnTransp={false}
    btnTranspRed={true}
    btnUC={false}
    btnWhite={false}
    content="release date"
    id=""
    key="release date"
  />
  <Button
    btnBig={false}
    btnBold={true}
    btnClick={[MockFunction]}
    btnGrey={false}
    btnRed={false}
    btnSm={false}
    btnTransp={true}
    btnTranspRed={false}
    btnUC={false}
    btnWhite={false}
    content="rating"
    id=""
    key="rating"
  />
  <Button
    btnBig={false}
    btnBold={true}
    btnClick={[MockFunction]}
    btnGrey={false}
    btnRed={false}
    btnSm={false}
    btnTransp={true}
    btnTranspRed={false}
    btnUC={false}
    btnWhite={false}
    content="my rating"
    id=""
    key="my rating"
  />
</div>
`;

exports[`<FilmSort /> Render should render the component with default props 1`] = `
<div
  className="film-sort"
>
  <Label
    content="Sort by "
    labelBold={false}
    labelUC={false}
    labelWhite={false}
  />
  <Button
    btnBig={false}
    btnBold={true}
    btnClick={[Function]}
    btnGrey={false}
    btnRed={false}
    btnSm={false}
    btnTransp={false}
    btnTranspRed={true}
    btnUC={false}
    btnWhite={false}
    content="release date"
    id=""
    key="release date"
  />
  <Button
    btnBig={false}
    btnBold={true}
    btnClick={[Function]}
    btnGrey={false}
    btnRed={false}
    btnSm={false}
    btnTransp={true}
    btnTranspRed={false}
    btnUC={false}
    btnWhite={false}
    content="rating"
    id=""
    key="rating"
  />
  <Button
    btnBig={false}
    btnBold={true}
    btnClick={[Function]}
    btnGrey={false}
    btnRed={false}
    btnSm={false}
    btnTransp={true}
    btnTranspRed={false}
    btnUC={false}
    btnWhite={false}
    content="my rating"
    id=""
    key="my rating"
  />
</div>
`;
